# cinder

./: CMakeLists.txt  Makefile  README.md  cinder.cabal
app/: Main.hs
src/: cinder.c  main.c
src/include/: cinder.h
