cabal-version:      3.0
name:               cinder
version:            0.1.0
synopsis:           Build System for Obsidian
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             PeterGriffinSr
maintainer:         codezz-ops@protonmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cinder
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      process,
                      directory
    hs-source-dirs:   app
    default-language: Haskell2010
